[package]
authors = ["Josh Leverette <coder543@gmail.com>"]
name = "metric"
version = "0.1.0"
repository = "https://github.com/coder543/metric"
docs = "https://docs.rs/metric"
license = "MIT"
readme = "README.md"

keywords = ["units", "dimensional", "unit-aware"]

[[bench]]
harness = false
name = "bench1"

[dev-dependencies]
bencher = "0.1.2"
dimensioned = "0.6.0"
uom = "0.13.0"

[features]
default = ["std"]
std = []

[profile.bench]
debug = true
lto = true
