[package]
authors = ["Josh Leverette <coder543@gmail.com>"]
name = "metric"
version = "0.1.1"
repository = "https://github.com/coder543/metric"
documentation = "https://docs.rs/metric"
license = "MIT"
readme = "README.md"
description = "zero-cost dimensional analysis for safe, unit-aware numeric computations in Rust"

keywords = ["units", "dimensional", "unit-aware", "dimensional-analysis", "no_std"]

[[bench]]
harness = false
name = "bench1"

[dev-dependencies]
bencher = "0.1.2"
dimensioned = "0.6.0"
uom = "0.14.0"

[features]
default = ["std"]
std = []

[profile.bench]
debug = true
lto = true
